updating some CSS, resizing img to win performance

--- a/contact.html
+++ b/contact.html
@@ -12,11 +12,11 @@
 	<link rel="stylesheet" type="text/css" href="./css/et-line.min.css">
 	
     
-	<script src="./js/jquery-2.1.0.min.js" defer></script>
-	<script src="./js/bootstrap.min.js" defer></script>
-	<script src="./js/blocs.min.js" defer></script>
+	<script src="./js/jquery-2.1.0.js" async></script>
+	<script src="./js/bootstrap.js" async></script>
+	<script src="./js/blocs.js" async></script>
 	<script src="./js/jqBootstrapValidation.js" async></script>
-	<script src="./js/formHandler.js" defer></script>
+	<script src="./js/formHandler.js" async></script>
 
     <title>La Panthère | Contact</title>
 
@@ -130,7 +130,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<p class="text-center white">
-					Agence La Panthère - Agence web basée à Lyon.<br>
+					Agence La Panthère - Entreprise de webdesign basée à Lyon.<br>
 				</p>
 				<div class="row row-no-gutters social">
 					<div class="col-sm-3">
