--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="La Panthère est une entreprise de webdesign basée à Lyon qui aide les entreprises à devenir attractives et visibles sur Internet.">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="./img/favicon.webp">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
