--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="description" content="Pour nous contacter et donner vie à votre projet, voous êtes au bon endroit !">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
-    <link rel="shortcut icon" type="image/png" href="favicon.webp">
+    <link rel="shortcut icon" type="image/png" href="img/favicon.webp">
     
 	<link rel="stylesheet" type="text/css" href="./css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="style.css">
