--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 	<div class="container bloc-sm">
 		<nav class="navbar row">
 			<div class="navbar-header">
-				<a class="navbar-brand" href="index.html" aria-label="Lien vers la page d'accueil"><img src="img/agence-la-panthere-monochrome.webp" alt="Logo de l'agence web La Panthère" height="40" /></a>
+				<a class="navbar-brand" href="index.html" aria-label="Lien vers la page d'accueil"><img src="img/agence-la-panthere-monochrome.webp" alt="Logo de l'agence web La Panthère"></a>
 				<button id="nav-toggle" type="button" class="ui-navbar-toggle navbar-toggle" data-toggle="collapse" data-target=".navbar-1">
 					<span class="sr-only">Toggle navigation</span><span class="icon-bar"></span><span class="icon-bar"></span><span class="icon-bar"></span>
 				</button>
@@ -80,24 +80,24 @@
 	<div class="container bloc-lg">
 		<div class="row form-wrapper">
 			<div class="col-sm-6 form-margin">
-				<form id="form_1" novalidate success-msg="Your message has been sent." fail-msg="Sorry it seems that our mail server is not responding, Sorry for the inconvenience!">
+				<form id="form_1">
 					<div class="form-group">
 						<label for="name">
 							Nom
 						</label>
-						<input id="name" class="form-control" required />
+						<input id="name" class="form-control" required>
 					</div>
 					<div class="form-group">
 						<label for="email">
 							Adresse email
 						</label>
-						<input id="email" class="form-control" type="email" required />
+						<input id="email" class="form-control" type="email" required>
 					</div>
 					<div class="form-group">
 						<label for="input_504">
 							Comment nous avez-vous connu ?
 						</label>
-						<input class="form-control" type="email" required id="input_504" />
+						<input class="form-control" type="email" required id="input_504">
 					</div>
 					<div class="form-group">
 						<label for="message">
