last modifs before evaluations

--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
     <meta charset="utf-8">
-    <meta name="description" content="Pour nous contacter et donner vie à votre projet, voous êtes au bon endroit !">
+    <meta name="description" content="Pour contacter l'entreprise de webdesign basée à Lyon La Panthère, vous êtes au bon endroit !">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover">
     <link rel="shortcut icon" type="image/png" href="img/favicon.webp">
     
